# vorevault-desktop

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
scripts/: gen-tray-icon.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: settings.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/commands/: change_watch_folder.toml  delete_rule.toml  fetch_folders.toml  fetch_tags.toml  get_autostart.toml  get_state.toml  list_rules.toml  save_rule.toml  set_autostart.toml  sign_in.toml  sign_out.toml  updater_check_now.toml  updater_get_state.toml  updater_install_and_restart.toml
src-tauri/src/: auth.rs  config.rs  db.rs  deeplink.rs  dialogs.rs  folders_api.rs  keychain.rs  main.rs  notifier.rs  path.rs  pipeline.rs  rules.rs  settings_window.rs  tray.rs  updater.rs  uploader.rs  watcher.rs
ui/: settings.css  settings.html  settings.js
ui-callback/: success.html
