[package]
name = "vorevault"
version = "0.1.0"
description = "Desktop tray client for VoreVault"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "vorevault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
keyring = "3"
tiny_http = "0.12"
url = "2"
urlencoding = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
