[package]
name = "vorevault"
version = "0.5.1"
description = "Desktop tray client for VoreVault"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tiny_http = "0.12"
url = "2"
urlencoding = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
dirs = "6"
tauri-plugin-dialog = "2"
crossbeam-channel = "0.5"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
